--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   firebase_database: 3.0.3
   flutter:
     sdk: flutter
-
+  charts_flutter: ^0.6.0
+  pie_chart: ^0.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
