Final prototype version for the Innovation Pilot deadline.
Plenty of features to add for my own portfolio, but good job nonetheless :)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ environment:
 
 dependencies:
   http: ^0.12.0+2
+  flutter_staggered_animations: "^0.1.2"
   grouped_buttons: ^1.0.4
   firebase_auth: ^0.11.1
   firebase_core: 0.4.0+6
